add pet favorites list

--- a/petfavorites.html
+++ b/petfavorites.html
@@ -5,8 +5,40 @@
   </head>
   <body>
     <h1>Buddha and Benny's Favorite things!</h1>
+   
+    <h3>Food:</h3>
+    
+    <ul>
+      <li>Buddha:
+        <ul>
+          <li>Beef Paté</li>
+          <li>Crunchy Chicken Treats</li>
+        </ul>
+      </li>
+      <li>Benny:
+        <ul>
+          <li>Turkey Paté</li>
+          <li>Canned Tuna</li>
+        </ul>
+      </li>
+    </ul>
 
+    <h3>Hang out spots:</h3>
 
+    <ul>
+      <li>Buddha:
+        <ul>
+          <li>Big pillow near the window</li>
+          <li>Family member's bed</li>
+        </ul>
+      </li>
+      <li>Benny:
+        <ul>
+          <li>Couch</li>
+          <li>Cat tree</li>
+        </ul>
+      </li>
+    </ul>
 
 
 
